# dumbbells

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
dumbbells/: Agent.py  agent.py  dataset.py  models.py  q_functions.py  trainer.py
notebooks/: Test.ipynb  Train.ipynb  reinforcement_q_learning.ipynb  trainer-impl.ipynb
notebooks/Trained_weights/CNNModel/model/: weights000-16-27_model_weights.model  weights000-16-27_optimizer_weights.optimizer  weights10000-16-29_model_weights.model  weights10000-16-29_optimizer_weights.optimizer  weights100000-16-55_model_weights.model  weights100000-16-55_optimizer_weights.optimizer  weights110000-17-09_model_weights.model  weights110000-17-09_optimizer_weights.optimizer  weights120000-17-36_model_weights.model  weights120000-17-36_optimizer_weights.optimizer  weights130000-18-03_model_weights.model  weights130000-18-03_optimizer_weights.optimizer  weights140000-18-28_model_weights.model  weights140000-18-28_optimizer_weights.optimizer  weights150000-18-41_model_weights.model  weights150000-18-41_optimizer_weights.optimizer  weights160000-18-48_model_weights.model  weights160000-18-48_optimizer_weights.optimizer  weights170000-19-09_model_weights.model  weights170000-19-09_optimizer_weights.optimizer  weights180000-19-43_model_weights.model  (+19 more)
tests/: test_agent.py  test_data.py  test_dataset.py  test_dumbbells.py  test_models.py  test_placeholder.py  test_q_functions.py
zaidbells/: agent.py  dataset.py  driver.py  models.py  q_functions.py  trainer.py
(+40 files in other folders)
