[tool.poetry]
name = "dumbbells"
version = "0.1.0"
description = ""
authors = ["DonatasTamosauskas <donatas.tamosauskas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gym = "^0.18.0"
torch = "^1.8.0"
torchvision = "^0.9.0"
matplotlib = "^3.3.4"
numpy = "^1.20.1"
jupyterlab = "^3.0.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
